--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#ffffff</color>
+    <color name="text_color333">#333333</color>
+    <color name="text_color666">#666666</color>
+    <color name="text_color999">#999999</color>
+    <color name="color_base_line">#e6e6e6</color>
 </resources>
